--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -27,13 +28,13 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8",
-    "tailwindcss": "^3.4.0",
     "framer-motion": "^8.4.3",
     "react-countup": "^6.4.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
     "react-scroll": "^1.8.9",
-    "react-type-animation": "^2.1.2"
+    "react-type-animation": "^2.1.2",
+    "tailwindcss": "^3.4.0",
+    "vite": "^5.0.8"
   }
 }
