--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,21 @@
   "description": "Personal Portfolio",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "Satyam Gupta",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.8",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.2"
+  },
+  "devDependencies": {
+    
+  }
 }
