--- a/backend/package.json
+++ b/backend/package.json
@@ -6,20 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "build":"npm i"
+    "build": "npm i"
   },
   "author": "Satyam Gupta",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "cron": "^3.1.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemailer": "^6.9.8",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2"
-  },
-  "devDependencies": {
-    
   }
 }
